Small changes to refactor the solution